Bring into line with master ffb3fc66b7f744a1a0c8b831e6da62d34da42963.

--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -1595,7 +1595,7 @@ Initial release
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-03-02 11:34:48 PST
+Last updated 2018-05-09 22:24:48 PDT
 </div>
 </div>
 </body>
