--- a/utarray.html
+++ b/utarray.html
@@ -1260,7 +1260,7 @@ A <em>pointer</em> to a particular element (obtained using <code>utarray_eltptr<
 <div id="footer">
 <div id="footer-text">
 Version 2.0.2<br />
-Last updated 2017-03-02 11:35:26 PST
+Last updated 2018-05-09 22:24:48 PDT
 </div>
 </div>
 </body>
