--- a/utringbuffer.html
+++ b/utringbuffer.html
@@ -1235,7 +1235,7 @@ The elements of a ring-buffer are stored in contiguous memory, but once the ring
 <div id="footer">
 <div id="footer-text">
 Version 2.0.2<br />
-Last updated 2017-03-02 11:35:34 PST
+Last updated 2018-05-09 22:24:48 PDT
 </div>
 </div>
 </body>
