--- a/utstring.html
+++ b/utstring.html
@@ -1069,7 +1069,7 @@ parameter by adding to the string start address and subtracting from its length.
 <div id="footer">
 <div id="footer-text">
 Version 2.0.2<br />
-Last updated 2017-03-02 11:35:41 PST
+Last updated 2018-05-09 22:24:48 PDT
 </div>
 </div>
 </body>
