--- a/utlist.html
+++ b/utlist.html
@@ -1260,7 +1260,7 @@ cellspacing="0" cellpadding="4">
 <thead>
 <tr>
 <th align="left" valign="top">Singly-linked                             </th>
-<th align="left" valign="top"> Doubly-linked                             </th>
+<th align="left" valign="top"> Doubly-linked                               </th>
 <th align="left" valign="top"> Circular, doubly-linked</th>
 </tr>
 </thead>
@@ -1292,8 +1292,8 @@ cellspacing="0" cellpadding="4">
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table"><code>LL_INSERT_INORDER2(head,add,cmp,next);</code></p></td>
-<td align="left" valign="top"><p class="table"><code>DL_INSERT_INORDER2(head,add,cmp,next);</code></p></td>
-<td align="left" valign="top"><p class="table"><code>CDL_INSERT_INORDER2(head,add,cmp,next);</code></p></td>
+<td align="left" valign="top"><p class="table"><code>DL_INSERT_INORDER2(head,add,cmp,prev,next);</code></p></td>
+<td align="left" valign="top"><p class="table"><code>CDL_INSERT_INORDER2(head,add,cmp,prev,next);</code></p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table"><code>LL_CONCAT2(head1,head2,next);</code></p></td>
@@ -1351,7 +1351,7 @@ cellspacing="0" cellpadding="4">
 <div id="footer">
 <div id="footer-text">
 Version 2.0.2<br />
-Last updated 2018-05-09 22:24:48 PDT
+Last updated 2018-11-09 10:23:37 EST
 </div>
 </div>
 </body>
